<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:visibility="gone"
        android:id="@+id/text_view_main_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textAlignment="center"
        android:textSize="@dimen/main_activity_text_size_normal_screen"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:visibility="gone"
        android:id="@+id/text_view2_main_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_party"
        android:textAlignment="center"
        android:textSize="@dimen/main_activity_text_size_normal_screen"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_main_activity" />

    <TextView
        android:visibility="gone"
        android:id="@+id/text_view3_main_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/have_a_nice_day"
        android:textAlignment="center"
        android:textSize="@dimen/main_activity_text_size_normal_screen"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view2_main_activity" />

    <TextView
        android:visibility="gone"
        android:id="@+id/text_view4_main_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/take_care_of_yourself"
        android:textAlignment="center"
        android:textSize="@dimen/main_activity_text_size_normal_screen"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view3_main_activity" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view4_main_activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_android1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_android1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_android1" />

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_android1"
        app:layout_constraintBottom_toTopOf="@+id/button_bounce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_go_to_motion_activity" />

    <Button
        android:id="@+id/button_blink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blink"
        app:layout_constraintBottom_toTopOf="@+id/button_fade_in"
        app:layout_constraintEnd_toStartOf="@+id/button_bounce"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_bounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bounce"
        app:layout_constraintBottom_toTopOf="@+id/button_fade_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate"
        app:layout_constraintBottom_toTopOf="@+id/button_fade_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toEndOf="@+id/button_bounce" />

    <Button
        android:id="@+id/button_fade_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fade_in"
        app:layout_constraintBottom_toTopOf="@+id/button_left_to_right"
        app:layout_constraintStart_toStartOf="@+id/button_blink" />

    <Button
        android:id="@+id/button_fade_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fade_out"
        app:layout_constraintBottom_toTopOf="@+id/button_right_to_left"
        app:layout_constraintEnd_toEndOf="@+id/button_rotate" />

    <Button
        android:id="@+id/button_left_to_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_to_right"
        app:layout_constraintBottom_toTopOf="@+id/button_zoom_in"
        app:layout_constraintStart_toStartOf="@+id/button_fade_in" />

    <Button
        android:id="@+id/button_right_to_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_to_left"
        app:layout_constraintBottom_toTopOf="@+id/button_zoom_out"
        app:layout_constraintEnd_toEndOf="@+id/button_fade_out" />

    <Button
        android:id="@+id/button_zoom_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/zoom_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_left_to_right" />

    <Button
        android:id="@+id/button_zoom_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/zoom_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_right_to_left" />

    <Button
        android:id="@+id/button_go_to_motion_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/second_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>